// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/actions/SelectActionStatut Avec Non Concerne 1`] = `
<div
  style={
    Object {
      "width": 200,
    }
  }
>
  <button
    aria-expanded={false}
    aria-label="ouvrir le menu"
    className="flex items-center w-full p-2 text-left text-sm min-w-5rem !w-fit p-0 !bg-transparent"
    data-test="SelectStatut"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onPointerDown={[Function]}
  >
    <div
      className="bg-grey-3 border-grey-3 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded !px-1.5 !py-0.5 min-w-fit mt-1"
      data-test="Badge-ActionStatutBadge"
    >
      <span
        className="text-grey-6 font-bold leading-4 text-left text-xs uppercase"
      >
        Non concerné
      </span>
    </div>
    <span
      className="ri-arrow-down-s-line font-normal text-center h-6 w-6 text-[1.5rem] leading-[1.5rem] flex mt-1 ml-auto"
    />
  </button>
</div>
`;

exports[`Storyshots ui/shared/actions/SelectActionStatut Avec Selection 1`] = `
<div
  style={
    Object {
      "width": 200,
    }
  }
>
  <button
    aria-expanded={false}
    aria-label="ouvrir le menu"
    className="flex items-center w-full p-2 text-left text-sm min-w-5rem !w-fit p-0 !bg-transparent"
    data-test="SelectStatut"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onPointerDown={[Function]}
  >
    <div
      className="bg-success-2 border-success-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded !px-1.5 !py-0.5 min-w-fit mt-1"
      data-test="Badge-ActionStatutBadge"
    >
      <span
        className="text-success-1 font-bold leading-4 text-left text-xs uppercase"
      >
        Fait
      </span>
    </div>
    <span
      className="ri-arrow-down-s-line font-normal text-center h-6 w-6 text-[1.5rem] leading-[1.5rem] flex mt-1 ml-auto"
    />
  </button>
</div>
`;

exports[`Storyshots ui/shared/actions/SelectActionStatut Selection Par Defaut 1`] = `
<div
  style={
    Object {
      "width": 200,
    }
  }
>
  <button
    aria-expanded={false}
    aria-label="ouvrir le menu"
    className="flex items-center w-full p-2 text-left text-sm min-w-5rem !w-fit p-0 !bg-transparent"
    data-test="SelectStatut"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onPointerDown={[Function]}
  >
    <div
      className="bg-grey-3 border-grey-3 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded border-grey-4 bg-white !px-1.5 !py-0.5 min-w-fit mt-1"
      data-test="Badge-ActionStatutBadge"
    >
      <span
        className="text-grey-6 font-bold leading-4 text-left text-xs uppercase"
      >
        Non renseigné
      </span>
    </div>
    <span
      className="ri-arrow-down-s-line font-normal text-center h-6 w-6 text-[1.5rem] leading-[1.5rem] flex mt-1 ml-auto"
    />
  </button>
</div>
`;
